--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Sketch</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
+    <!-- Add a button with a mouse click event -->
+    <button id="button" onclick="moveCars()">Move Cars</button>
+
 
     <script src="libraries/p5.min.js"></script>
     <script src="libraries/p5.sound.min.js"></script>
