now,the car can move across the height of the screen as a whole object

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" href="style.css">
     <!-- Add a button with a mouse click event -->
-    <button id="button" onclick="moveCars()">Move Cars</button>
+    <!-- <button id="button" onclick="moveCars()">Move Cars</button> -->
 
 
     <script src="libraries/p5.min.js"></script>
