changed style of the button

--- a/index.html
+++ b/index.html
@@ -7,15 +7,13 @@
     <title>Sketch</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
-    <!-- Add a button with a mouse click event -->
-    <!-- <button id="button" onclick="moveCars()">Move Cars</button> -->
-
 
     <script src="libraries/p5.min.js"></script>
     <script src="libraries/p5.sound.min.js"></script>
   </head>
 
   <body>
+    <button id="move-cars-button">Move Cars</button>
     <script src="sketch.js"></script>
   </body>
 </html>
